# referal_tg_bot

./: README.md  pyproject.toml
src/: config.py  db.py  main.py
src/services/: tg_bot.py
